# vision-flow

./: .gitignore  CLAUDE.md
ai-worker/: .env.example  Dockerfile  pyproject.toml
ai-worker/app/: celery_app.py  config.py  main.py
ai-worker/app/schemas/: training.py
ai-worker/app/services/: yolo.py
ai-worker/app/tasks/: training.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3f57854882f4_add_task_image_folder_path_and_task_.py  81d00fb7554f_add_annotations_table.py  980c9ca3a283_initial_schema.py  a1b2c3d4e5f6_add_task_snapshots_tables.py  b2c3d4e5f6a7_fix_fk_ondelete_task_snapshot_items_task_images.py  c3d4e5f6a7b8_fix_fk_ondelete_cascade_all_tables.py  d4e5f6a7b8c9_add_label_classes_snapshot_to_task_snapshots.py  e5f6a7b8c9d0_split_version_into_major_minor.py  f6a7b8c9d0e1_add_3level_version_stash_hashes.py
backend/app/: config.py  dependencies.py  error_handler.py  logging_config.py  main.py
backend/app/models/: __init__.py  annotation.py  data_store.py  dataset.py  enums.py  folder_meta.py  image.py  label_class.py  project.py  subset.py  subset_image.py  task.py  task_folder_meta.py  task_image.py  task_snapshot.py  task_snapshot_item.py  user.py
backend/app/routers/: annotations.py  auth.py  data_stores.py  datasets.py  images.py  label_classes.py  projects.py  subsets.py  (+2 more)
backend/scripts/: generate_thumbnails.py
backend/tests/: conftest.py  test_auth.py  test_data_stores.py  test_datasets.py  test_folder_image_ids.py  test_label_classes.py  test_projects.py  test_tasks.py
(+209 files in other folders)
